# abm-benchmark

./: CONTAINERS.md  CONTRIBUTE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: add-example.md
.github/workflows/: build-devcontainer.yml
01-epiworldr_seir_network/: README.md  README.qmd
