[project]
name = "abm-benchmark"
version = "0.1.0"
description = "Agent-based modeling benchmark examples for epidemiological research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EpiForeSITE Team", email = "contact@epifore.site"}
]
keywords = ["epidemiology", "agent-based-modeling", "public-health", "simulation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/EpiForeSITE/abm-benchmark"
Documentation = "https://github.com/EpiForeSITE/abm-benchmark/blob/main/README.md"
Repository = "https://github.com/EpiForeSITE/abm-benchmark"
Issues = "https://github.com/EpiForeSITE/abm-benchmark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]